# Kina

./: README.md  dragon.txt  pyproject.toml  semantic1  semantic2  semantic3  semantic4  semantic5.txt  semantic6
kina/: __init__.py  __main__.py  art.py  html_output.py  lsystem.py  rasterize.py  turtle.py
